--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 </head>
 
 <body>
+    <header>
         <h1>Tamagotchi Code Along</h1>
+    </header>
+    <main>
+        <section id="controller" class="button-wrapper">
+            <button>feed</button>
+            <button>play</button>
+            <button>sleep</button>
+        </section>
+        <section id="stat-display" class="stats-wrapper">
+            <p>Happiness: <span id="boredom-stat">10</span></p>
+            <p>Hunger: <span id="hunger-stat">0</span></p>
+            <p>Tiredness: <span id="sleepiness-stat">5</span></p>
+        </section>
+        <section id="game-stat">
+            <img id="tama-graphic" src="./imgs/wolf-1.png" class="game-graphic">
+        </section>
+    </main>
 </body>
 
 </html>
